Add ability to iterate over API::Array https://bugs.webkit.org/show_bug.cgi?id=124533

Patch by Martin Hock <mhock@apple.com> on 2013-12-02
Reviewed by Sam Weinig.

* GNUmakefile.list.am:
* Shared/APIArray.h:
* Shared/FilterIterator.h:
* Shared/IteratorPair.h:
* WebKit2.xcodeproj/project.pbxproj:
* WebProcess/InjectedBundle/InjectedBundle.cpp:
(WebKit::toStringVector):
* WebProcess/InjectedBundle/InjectedBundlePageEditorClient.cpp:
(WebKit::InjectedBundlePageEditorClient::getPasteboardDataForRange):

Canonical link: https://commits.webkit.org/143232@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159992 268f45cc-cd09-0410-ab3c-d52691b4dbfc