Source/WebKit2/WebProcess/InjectedBundle/InjectedBundle.cpp
@@ -485,11 +485,8 @@ static Vector<String> toStringVector(API::Array* patterns)
         return patternsVector;
 
     patternsVector.reserveInitialCapacity(size);
-    for (size_t i = 0; i < size; ++i) {
-        WebString* entry = patterns->at<WebString>(i);
-        if (entry)
-            patternsVector.uncheckedAppend(entry->string());
-    }
+    for (const auto& entry : patterns->elementsOfType<WebString>())
+        patternsVector.uncheckedAppend(entry->string());
     return patternsVector;
 }
 
